--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.html",
   "window": {
     "frame": false,
-    "fullscreen": false
+    "fullscreen": false,
+    "icon": "./img/markdown-preview-mark.png"
   },
   "dependencies": {
     "request": "^2.79.0",
