--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/rbeer/nwjs-mdp#readme",
   "version": "0.0.9",
-  "devDependencies": {},
+  "devDependencies": {
+    "minami": "^1.1.1"
+  },
   "keywords": [
     "NWjs",
     "markdown",
