Add: initial window height to 500(px)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fullscreen": false,
     "icon": "./img/markdown-preview-mark.png",
     "position": "mouse",
-    "position_mouse_center": true
+    "position_mouse_center": true,
+    "height": 540
   },
   "openDevTools": true,
   "dependencies": {
